added blink css animation to replicate shot

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>ALIEN BATTLESHIPS</header>
+    <header class="animate__flash">ALIEN BATTLESHIPS</header>
     <main class="game-board">
         <section class="enemy-section"></section>
         <section class="points-info">
